[package]
name = "reflect"
version = "0.1.0"
authors = ["westdabestdb <westownzyou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
listenfd = "0.3.3"
serde = "1.0.123"
serde_json = "1.0.62"
