[package]
name = "reflect"
version = "0.1.0"
authors = ["westdabestdb <westownzyou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
listenfd = "0.3.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
env_logger = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4", "v5", "v3"] }
